syntax = "proto3";

package ras.protocol.v1;

import "google/protobuf/descriptor.proto";
import "ras/protocol/v1/types.proto";

option go_package = "github.com/v8platform/protos/gen/rasbinary/protocol/v1";

extend google.protobuf.MessageOptions {
  PacketType packet_type = 475223889;
  EndpointDataType endpoint_data_type = 475223890;
}